Fix bugs with content overflow

--- a/source/sass/blocks/program.scss
+++ b/source/sass/blocks/program.scss
@@ -48,6 +48,7 @@
 }
 
 .program__text {
+  width: 226px;
   margin: 0;
   margin-bottom: 38px;
   font-style: normal;
@@ -58,6 +59,7 @@
   color: $black;
 
   @media (min-width: $tablet-width) {
+    width: 323px;
     margin-bottom: 66px;
     font-size: 20px;
     line-height: 30px;
