--- a/source/sass/blocks/target-block.scss
+++ b/source/sass/blocks/target-block.scss
@@ -34,6 +34,7 @@
 .target-block__list {
   @media (min-width: $tablet-width) {
     padding-left: 28px;
+    padding-right: 15px;
   }
 
   @media (min-width: $desktop-width) {
